--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["Samuel Marks <@SamuelMarks>"]
 edition = "2018"
 
 [dependencies]
+serde = {version = "1.0.100", features = ["derive"]}
+serde_derive = "1.0"
+serde_yaml = "0.8.9"
+erased-serde = "0.3.9"
